--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,5 +3,8 @@
         "activityBar.background": "#0A342A",
         "titleBar.activeBackground": "#0E493B",
         "titleBar.activeForeground": "#F3FDFB"
+    },
+    "files.associations": {
+        "stdlib.h": "c"
     }
 }
